# agentapi

./: README.md  pyproject.toml
db/: agent.sql  reggie.sql
src/agentapi/: App.py  fastdemo.py  main.py
src/agentapi/agent/: Agent.py  agent.py  chat.py  langchat.py  login.py
src/agentapi/entity/: result.py  user.py
src/agentapi/template/: agent_redis_rag.py
src/agentapi/utils/: DbTool.py  agent_redis.py  dbtool.py  login_utils.py  redis_tool.py
src/agentapi/utils/template/: agent_redis.py  agent_redis_new.py  agent_redis_rag.py
tests/: test.py
